# Task2

./: .gitmodules  README.md
diffbot/: CMakeLists.txt  frames_2025-02-16_20.42.28.gv  frames_2025-02-16_20.51.02.gv  package.xml
diffbot/config/: gz_bridge.yaml  map1.pgm  map1.yaml  mapper.yaml  nav2_params.yaml
diffbot/launch/: gazebo.launch.py  mapping.launch.py  navigation.launch.py  rsp.launch.py
diffbot/meshes/: body_nokiya.dae
diffbot/models/aws_robomaker_warehouse_bucket_01/3/: model.sdf
diffbot/models/aws_robomaker_warehouse_clutteringc_01/4/: model.sdf
diffbot/models/aws_robomaker_warehouse_clutteringd_01/4/: model.sdf
diffbot/models/aws_robomaker_warehouse_shelfe_01/4/: metadata.pbtxt  model.sdf
diffbot/urdf/: gazebo.xacro  inertia.xacro  materials.xacro  robot_sim.xacro  two_wheel_bot.xacro
diffbot/worlds/: ionic.sdf  random_obstacles.sdf  world_v1.sdf
differential_drive_controller/: CMakeLists.txt  package.xml
differential_drive_controller/scripts/: waypoint_nav.py  waypoint_navigation.py
differential_drive_controller/src/: rpm_publisher.cpp
rpmdiffdrive/: CMakeLists.txt  package.xml
rpmdiffdrive/src/: CustomDiffDrive.cc  CustomDiffDrive.hh
